# inkorporated

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Gemfile  LICENSE  MCP_CONFIGURATION_FIX_SUMMARY.md  README.md  TODO.md  WORKSPACE.bazel  _config.yml  cline_mcp_config.env  cline_mcp_config.env.example  cline_mcp_config.example  cline_mcp_settings.json  config_management.md  package-lock.json  package.json  run_all_tests.sh  test_env_loader.sh  validate_config.sh  validate_domain_config.sh  verify_fix.sh
.clinerules/: 00-clines-memory-bank-rule.md  01-general.md  02-project-specific.md  configuration-management.md
.clinerules/accessibility/: accessibility-standards.md
.clinerules/general/: architecture-decision-records.md  code-style-patterns.md  documentation-requirements.md
.clinerules/internationalization/: internationalization.md
.clinerules/operations/: ci-cd-practices.md  dependency-management.md  logging-monitoring.md  version-control-practices.md
.clinerules/performance/: performance-optimization.md
.clinerules/quality/: testing-standards.md
.clinerules/security/: security-guidelines.md
.clinerules/workflows/: api.md  archive.md  audit.md  automate.md  backup-infrastructure.md  backup.md  benchmark.md  bisect.md  blame.md  branch.md  bugfix.md  build.md  bundle.md  changelog.md  cherrypick.md  ci-config.md  ci.md  clean.md  comment.md  commit.md  containerize.md  contribute.md  db.md  debug.md  decrypt.md  deploy.md  deps.md  diff.md  docs.md  encrypt.md  env.md  extract.md  feature.md  format.md  impl-strategy.md  init.md  inline.md  install.md  issue.md  license.md  (+44 more)
.devcontainer/: .env.example  Dockerfile  ENV_PULL_SOLUTION.md  README.md  cline_mcp_config.env  cline_mcp_config.env.example  cline_mcp_setting.json.example  cline_mcp_settings.json  devcontainer-config.env  devcontainer-config.env.example  devcontainer.json  setup-devcontainer-tools.sh  test-env-loading.sh  test-env-pull.sh  test-file-deletion.sh  test-framework.sh  test-post-create.sh
.devcontainer/scripts/: post_create_command.sh
.github/workflows/: domain-validation.yml  gh-pages.yml  pages.yml  presubmit.yml
_data/: navigation.yml
apps/: README.md
apps/argo-cd/: manifests.yaml
apps/environments/: README.md
apps/shared/: implementation_status.md
bootstrap/: init_hybrid.sh
clinerules-bank/general/: architecture-decision-records.md  code-style-patterns.md  documentation-requirements.md
clinerules-bank/internationalization/: internationalization.md
clinerules-bank/operations/: dependency-management.md  logging-monitoring.md  version-control-practices.md
clinerules-bank/performance/: performance-optimization.md
clinerules-bank/quality/: code-review-guidelines.md
cloud/: burst.sh
config/: domain-config.yaml  environment-config.yaml
config/environments/: README.md
docs/: COMPREHENSIVE_PROJECT_DOCUMENTATION.md  CONFIGURATION_GUIDE.md  DGX_INTEGRATION_PLAN.md  DGX_INTEGRATION_SUMMARY.md  DISCOVERY_AND_DOCUMENTATION_SUMMARY.md  ENVIRONMENT_IMPLEMENTATION_GUIDE.md  Gemfile  INDEX.md  README.html  README.md  SERVICE_SPECIFIC_DOCUMENTATION.md  _config.yml  cloudflared_implementation_status.md  feed.xml  implementation_plan.md  implementation_plan_updated.md  implementation_status_summary.md  implementation_tasks.md  index.html  index.md  infrastructure_setup_guide.md  infrastructure_validation_report.md  inkorporated_project_status.md  technical_design_doc.md
docs/_data/: navigation.yml
docs/adr/: 0001-example-architecture-decision.html  0001-example-architecture-decision.md  template.html  template.md
docs/architecture/: ARCHITECTURE.html  ARCHITECTURE.md  README.html  README.md  dgx_integration_plan.html  dgx_integration_plan.md  index.html  index.md  network.html  network.md  technical_design.html  technical_design.md
docs/guides/: README.html  README.md  backups.html  backups.md  deployment.md  (+15 more)
infrastructure/ansible/: BUILD.bazel  README.md  ansible.cfg  ansible_lint_wrapper.sh
infrastructure/ansible/inventory/: hosts.ini
infrastructure/ansible/inventory/group_vars/: control_plane.yml  worker_nodes.yml
infrastructure/ansible/playbooks/: bootstrap-gitops.yml  cluster-setup.yml  k3s-install.yml  post-setup.yml
infrastructure/ansible/roles/argocd/tasks/: main.yml
infrastructure/ansible/roles/cloud-join/tasks/: main.yml
infrastructure/ansible/roles/cluster/tasks/: main.yml
infrastructure/ansible/roles/common/tasks/: main.yml
infrastructure/ansible/roles/gitea-runner/tasks/: main.yml
infrastructure/ansible/roles/gitea-runner/templates/: config.toml.j2  docker-compose.yml.j2
infrastructure/ansible/roles/gitea/tasks/: main.yml
infrastructure/ansible/roles/gitea/templates/: docker-compose.yml.j2
infrastructure/ansible/roles/k3s-install/tasks/: main.yml
infrastructure/ansible/roles/k3s-install/vars/: main.yml
infrastructure/ansible/roles/k3s/tasks/: main.yml
infrastructure/ansible/roles/k3s/templates/: k3s.service.j2
infrastructure/terraform/: BUILD.bazel  README.md  check_fmt.sh  fmt.sh  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  validate.sh  validate_terraform.sh  variables.tf
infrastructure/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vm/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vm/cloud-init/: user-data.tpl
infrastructure/terraform/profiles/medium/: variables.tf
infrastructure/terraform/profiles/min/: variables.tf
infrastructure/terraform/profiles/recommended/: variables.tf
infrastructure/terraform/providers/aws/: main.tf  variables.tf
infrastructure/terraform/providers/gcp/: main.tf  variables.tf
infrastructure/terraform/providers/proxmox/: main.tf  outputs.tf  variables.tf
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: README.md
tests/config/: BUILD.bazel  scan_secrets.sh  test_config_validation.sh  test_env_vars.sh  test_environment_inheritance.sh  test_validate_infrastructure.sh  test_validation_script.sh  validate_infrastructure.sh
(+116 files in other folders)
