# Root BUILD file for Inkorporated Bazel workspace

load("@rules_sh//sh:defs.bzl", "sh_test")
load("@rules_lint//lint:defs.bzl", "lint_suite")

# Target that runs all tests (depends on validate_config and tests)
sh_test(
    name = "all_tests",
    srcs = ["run_all_tests.sh"],
    deps = [":validate_config", "//tests:all"],
)

# Linting suite for all files
lint_suite(
    name = "lint_all",
    tags = ["manual"],
)

# Target for config validation
sh_test(
    name = "validate_config",
    srcs = ["validate_config.sh"],
)