# Root BUILD file for Inkorporated Bazel workspace

load("@rules_sh//sh:defs.bzl", "sh_test")

# Target that runs all tests (depends on validate_config and tests)
sh_test(
    name = "all_tests",
    srcs = ["run_all_tests.sh"],
    deps = [":validate_config", "//tests:all"],
)

# Target for config validation
sh_test(
    name = "validate_config",
    srcs = ["validate_config.sh"],
)
