workspace(name = "inkorporated")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Terraform Binary
http_archive(
    name = "terraform_linux_amd64",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
filegroup(
    name = "terraform",
    srcs = ["terraform"],
)
""",
    urls = ["https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip"],
    sha256 = "6543b591b798782d02c5c9930f3a60a89d7b4c653069152f67931b64366539f1",
)

# Rules for linting (general, including YAML for Ansible)
http_archive(
    name = "rules_lint",
    urls = ["https://github.com/aspect-build/rules_lint/archive/refs/heads/main.zip"],
    strip_prefix = "rules_lint-main",
)
load("@rules_lint//lint:dependencies.bzl", "lint_dependencies")
lint_dependencies()

# Rules for shell testing
http_archive(
    name = "rules_sh",
    urls = ["https://github.com/bazelbuild/rules_sh/archive/refs/heads/main.zip"],
    strip_prefix = "rules_sh-main",
)