workspace(name = "inkorporated")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Terraform Binary
http_archive(
    name = "terraform_linux_amd64",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
filegroup(
    name = "terraform",
    srcs = ["terraform"],
)
""",
    urls = ["https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip"],
    sha256 = "6543b591b798782d02c5c9930f3a60a89d7b4c653069152f67931b64366539f1",
)

# Rules for linting (general, including YAML for Ansible)
http_archive(
    name = "aspect_rules_lint",
    sha256 = "93a19e0b93d92cb2bf80eb0060e9b8195bcb345074efefef0001191fa2836c6d",
    strip_prefix = "rules_lint-1.0.9",
    url = "https://github.com/aspect-build/rules_lint/releases/download/v1.0.9/rules_lint-v1.0.9.tar.gz",
)

# aspect_rules_lint depends on aspect_bazel_lib
http_archive(
    name = "aspect_bazel_lib",
    sha256 = "6d758a8f646ecee7a3e294fbe4386daafbe0e5966723009c290d493f227c390b",
    strip_prefix = "bazel-lib-2.7.7",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v2.7.7/bazel-lib-v2.7.7.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")
aspect_bazel_lib_dependencies()

load("@aspect_rules_lint//format:repositories.bzl", "rules_lint_dependencies")
rules_lint_dependencies()

# Rules for shell testing
http_archive(
    name = "rules_sh",
    urls = ["https://github.com/bazelbuild/rules_sh/archive/refs/heads/main.zip"],
    strip_prefix = "rules_sh-main",
)