workspace(name = "inkorporated")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Rules for linting (general, including YAML for Ansible)
http_archive(
    name = "rules_lint",
    urls = ["https://github.com/aspect-build/rules_lint/archive/refs/heads/main.zip"],
    strip_prefix = "rules_lint-main",
)
load("@rules_lint//lint:dependencies.bzl", "lint_dependencies")
lint_dependencies()

# Rules for shell testing
http_archive(
    name = "rules_sh",
    urls = ["https://github.com/bazelbuild/rules_sh/archive/refs/heads/main.zip"],
    strip_prefix = "rules_sh-main",
)