# Ansible BUILD file for Inkorporated project

load("@rules_sh//shell:sh_test.bzl", "sh_test")

# Ansible linting test
sh_test(
    name = "ansible_lint",
    srcs = ["ansible_lint_wrapper.sh"],
    data = glob(["**/*.yml", "**/*.yaml"], allow_empty = True),
    args = ["--strict", "--force-color"],
)