# Terraform BUILD file for Inkorporated project

package(default_visibility = ["//visibility:public"])

# Terraform validation
sh_test(
    name = "terraform_validate",
    srcs = ["validate.sh"],
    data = [
        "@terraform_linux_amd64//:terraform",
        ":terraform_srcs",
    ],
    args = ["$(location @terraform_linux_amd64//:terraform)"],
)

# Terraform formatting check
sh_test(
    name = "terraform_fmt",
    srcs = ["fmt.sh"],
    data = [
        "@terraform_linux_amd64//:terraform",
        ":terraform_srcs",
    ],
    args = ["$(location @terraform_linux_amd64//:terraform)"],
    tags = ["manual"],
)

filegroup(
    name = "terraform_srcs",
    srcs = glob(["**/*.tf", "**/*.tfvars"]),
)
