# Terraform BUILD file for Inkorporated project

# Since rules_tf is removed (repository is 404), we define simple shell tests
# for Terraform validation and formatting.
# Requirement: 'terraform' binary must be in the PATH.

sh_test(
    name = "terraform_validate",
    srcs = ["validate_terraform.sh"],
    data = glob(["**/*.tf"]),
    tags = ["manual"], # Skip if terraform is not installed
)

sh_test(
    name = "terraform_fmt",
    srcs = ["check_fmt.sh"],
    data = glob(["**/*.tf"]),
    tags = ["manual"], # Skip if terraform is not installed
)
