# Configuration tests BUILD file for Inkorporated project

load("@rules_sh//sh:defs.bzl", "sh_test")
load("@aspect_rules_lint//lint:defs.bzl", "secret_scan")

# Test for infrastructure validation
sh_test(
    name = "validate_infrastructure",
    srcs = ["validate_infrastructure.sh"],
    data = glob(["**/*.sh"]),
)

# Security scan for configuration files
secret_scan(
    name = "config_security_scan",
    targets = ["//config:all_configs"],
    tags = ["manual"],
)