# Configuration tests BUILD file for Inkorporated project

load("@rules_sh//shell:sh_test.bzl", "sh_test")

# Test for infrastructure validation
sh_test(
    name = "validate_infrastructure",
    srcs = ["validate_infrastructure.sh"],
    data = glob(["**/*.sh"]),
)

# Security scan for configuration files
# Replaced 'secret_scan' from rules_lint with a local shell test
sh_test(
    name = "config_security_scan",
    srcs = ["scan_secrets.sh"],
    data = glob(["//config:all_configs"]), # Assuming this target exists or I need to glob directly
    tags = ["manual"],
)
